# daniel.haxx.se

./: .htaccess  Makefile  README.md  about.md  about.t  address.t  body.t  bredband.t  computers.t  content.css  daniel.css  daniel.t  datateknik.t  hackers.t  how-to-invite-me.t  index.t  index2.t  irchistory.t  job.t  lora.css  m3.t  microsoft.t  my-name-in-products.t  mynextassignment.t  myopensource.t  no_more_download_sites.t  now.t  old.t  opensource.md  opensource.t  photos.t  podcasts.t  rockbox-sandisk-connection.t  setup.t  skills.t  source.t  talk.inc  talks.t  transition.t  us-visa.t  (+5 more)
devcons/: Makefile  head.t  index.t
docs/: Makefile  URL-interop.t  bittorrent-vs-http.t  curl-vs-httpie.t  curl-vs-libcurl.t  curl-vs-wget.t  encrypted-transfer-protocols-compared.t  ftp-vs-http.t  index.t  m6d2.t  poll-vs-select.t  sshproxy.t  wcurl-vs-wget.t
email/: Makefile  emailtemplate.t  index.t  mkhtml.pl  mkindex.pl  toc.t
everything-curl/: Makefile  data.pl  index.html  index.t
hexpoetry/: Makefile  goodies.t  index.cgi  swedish.cgi  words.cgi  words.txt
http2/: Makefile  changelog.t  faq.t  index.t  pres.t  topmenu.t
hus/: Makefile  bilder.t  hus.t
old-photos/: Makefile  Makefile~  index.html  (+2 more)
projects/mail2sms/mail2sms-1.3.5/: CHANGES  FILES  INSTALL  LEGAL  Makefile  Makefile.in  README  REGEX  TODO  UPGRADE  base64.c  config.h  config.h.in  configure  configure.in  example.conf  forward.README  forward.example  mail2sms.1  mail2sms.4  main.c  main.h  maketgz  parse.c  parse.h  regex.c  sendmsg.c  sendmsg.h  sms.c  sms.h  struct.c  struct.h  uudecode.c
(+284 files in other folders)
